--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "tsc && node dist/index.types",
-    "dev": "nodemon src/index.ts",
+    "dev": "nodemon ./src/index.ts",
     "sonar": "sonar-scanner"
   },
   "author": "",
@@ -16,7 +16,6 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.11.7",
     "@types/nodemon": "^1.19.6",
     "amqplib": "^0.10.3",
     "bcrypt": "^5.1.1",
@@ -31,7 +30,9 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@types/node": "^20.12.7",
     "@types/signale": "^1.4.7",
-    "sonarqube-scanner": "^3.3.0"
+    "sonarqube-scanner": "^3.3.0",
+    "ts-node-dev": "^2.0.0"
   }
 }
